# oxiby

./: Cargo.toml  README.md  deny.toml  rustfmt.toml
examples/: a.ob  call.ob  closures.ob  conditional.ob  container.ob  enums.ob  fn_param_combos.ob  functions.ob  hashes.ob  imports.ob  lists.ob  loops.ob  maps.ob  patterns.ob  result_tuple.ob  root.ob  structs.ob  tic_tac_toe.ob  tour.ob  tuple_access.ob  types.ob
examples/a/: b.ob
examples/imports/: b.ob  c.ob  d.ob  e.ob  main.ob
fixtures/: call.rb  closures.rb  conditional.rb  container.rb  enums.rb  fn_param_combos.rb  functions.rb  hashes.rb  imports.rb  lists.rb  loops.rb  maps.rb  patterns.rb  result_tuple.rb  root.rb  structs.rb  tic_tac_toe.rb  tour.rb  tuple_access.rb  types.rb
lib/: all.rb  convert.ob  fs.ob  hash_map.rb  io.ob  list.ob  map.rb  ops.ob  option.ob  range.rb  result.ob  ruby.rb  string.rb  tuple.rb
src/: ast.rs  check.rs  cli.rs  compiler.rs  error.rs  expr.rs  import.rs  intrinsic.rs  item.rs  lib.rs  main.rs  module.rs  pattern.rs  stage.rs  token.rs  types.rs
src/check/: function.rs  tr.rs  ty.rs
src/expr/: expr_array.rs  expr_binary.rs  expr_block.rs  expr_boolean.rs  expr_break.rs  expr_call.rs  expr_closure.rs  expr_conditional.rs  expr_continue.rs  expr_enum.rs  expr_field.rs  expr_float.rs  expr_for_loop.rs  expr_hash_map.rs  expr_ident.rs  expr_index.rs  expr_integer.rs  expr_let.rs  expr_list.rs  expr_loop.rs  expr_map.rs  expr_match.rs  expr_parenthesized.rs  expr_range.rs  expr_return.rs  expr_ruby.rs  expr_string.rs  expr_struct.rs  expr_tuple.rs  (+2 more)
tests/: oxiby.rs
(+11 files in other folders)
